2013-11-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/openvassd.8.in: Removed reference to openvas(1) because
	there is no such man page.

2013-11-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (host_authorized): Add addr parameter. Adjust calls to
	openvas_host_in_hosts.
	(attack_network): Adjust calls to host_authorized.

	* doc/openvassd.8.in: Update documentation for host access behavior with
	hostnames.

2013-11-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/ntp_11.c (is_scanner_only_pref): New function to check for
	scanner-only prefrences.
	(ntp_11_read_prefs): Use new fuction.

2013-11-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (iface_authorized): Check access with sys_ifaces_allow and
	sys_ifaces_deny preferences and return value accordingly.
	(apply_source_iface_preference): Handle iface_authoried return value.
	(attack_network): Also apply hosts access control with sys_hosts_allow
	and sys_hosts_deny preferences.

	* src/ntp_11.c (ntp_11_read_prefs): Add sys_hosts_allow, sys_hosts_deny,
	sys_ifaces_allow and sys_ifaces_deny as scanner-side only preferences.

	* doc/openvassd.8: Update documentation for the new scanner-side
	preferences.

2013-11-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main_loop): Duplicate asciiaddr into old_addr.

2013-11-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_network), src/openvassd.c (main_loop): Fix some
	memory leaks.

2013-11-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_network): Return error for erroneous source
	interface value too and not just when access to it is denied.

2013-11-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt, src/CMakeLists.txt: Adjust for removal of old rules
	system.

	* src/attack.c: Don't include rules.h
	(attack_networks): Remove rules checking.

	* src/comm.c: Don't include rules.h